SERVER-74348 Fixing wrong parameter order